--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,19 @@
 	    <version>1.10.1</version>
 	</dependency>
     
+    <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+</dependency>
     
-    
+            <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>2.48.2</version>
+        </dependency>
+        
+        
   </dependencies>
 </project>
